[package]
name = "mytaskbar"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
strip = "symbols"

[build-dependencies]
winres = "0.1.12"

[dependencies]
fxhash = "0.2.1"

[features]
default = ["light", "en"]
dark = []
light = []
en = []
jp = []

[dependencies.windows]
version = "0.52.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]
